RESOLVED FIXED209651
[css-grid][css-flexbox] WPT tests for computed style for auto minimum size fail
https://bugs.webkit.org/show_bug.cgi?id=209651
Summary [css-grid][css-flexbox] WPT tests for computed style for auto minimum size fail
Attachments
Patch (9.01 KB, patch)
2020-05-20 12:59 PDT, Oriol Brufau
no flags
Patch (7.20 KB, patch)
2020-05-20 13:39 PDT, Oriol Brufau
no flags
Carlos Alberto Lopez Perez
Comment 1 2020-04-13 20:46:43 PDT
The WPT flexbox test which was added to WPT on the same Chromium bug from above also fails on WebKit http://wpt.live/css/css-flexbox/getcomputedstyle/flexbox_computedstyle_min-auto-size.html So its likely the same issue or very related
Oriol Brufau
Comment 2 2020-05-20 12:59:40 PDT
Manuel Rego Casasnovas
Comment 3 2020-05-20 13:04:26 PDT
Comment on attachment 399880 [details] Patch Thanks for the fix. r=me
Manuel Rego Casasnovas
Comment 4 2020-05-20 13:06:20 PDT
Comment on attachment 399880 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=399880&action=review > LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/getcomputedstyle/flexbox_computedstyle_min-auto-size.html:1 > +<!DOCTYPE html> Mmm, shouldn't this new test appear in some w3c-import.log file?
Manuel Rego Casasnovas
Comment 5 2020-05-20 13:09:01 PDT
(In reply to Manuel Rego Casasnovas from comment #4) > Comment on attachment 399880 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=399880&action=review > > > LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/getcomputedstyle/flexbox_computedstyle_min-auto-size.html:1 > > +<!DOCTYPE html> > > Mmm, shouldn't this new test appear in some w3c-import.log file? Actually this test is already imported... I guess you need to update your trunk and rebase this patch.
Oriol Brufau
Comment 6 2020-05-20 13:39:23 PDT
Oriol Brufau
Comment 7 2020-05-20 13:40:40 PDT
Comment on attachment 399884 [details] Patch Thanks, rebased the patch.
EWS
Comment 8 2020-05-20 17:12:50 PDT
Committed r261974: <https://trac.webkit.org/changeset/261974> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399884 [details].
Radar WebKit Bug Importer
Comment 9 2020-05-20 17:13:18 PDT
Note You need to log in before you can comment on or make changes to this bug.